--- a/pypi/pyproject.toml
+++ b/pypi/pyproject.toml
@@ -3,7 +3,7 @@ requires = ["setuptools", "wheel"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "briefer"
+name = "insighter"
 version = "0.0.14"
 description = "Python notebooks and dashboards in a single place. Create powerful and flexible dashboards using code, or build beautiful Notion-like notebooks and share them with your team."
 readme = "README.md"
@@ -12,10 +12,10 @@ requires-python = ">=3.7"
 dependencies = ["docker", "requests"]
 
 [project.urls]
-Homepage = "https://briefer.cloud"
-Documentation = "https://github.com/briefercloud/briefer/README.md"
-Repository = "https://github.com/briefercloud/briefer"
+Homepage = "https://insighter.cloud"
+Documentation = "https://github.com/insightercloud/insighter/README.md"
+Repository = "https://github.com/insightercloud/insighter"
 
 [project.scripts]
-briefer = "briefer.main:main"
+insighter = "insighter.main:main"
 
